@@ -35,12 +35,11 @@ Sage: Vectors Over the Symbolic Ring
     >>> # this however is an entangled state
     >>> (ha*hb).array([[1/sqrt(5),0],[0,2/sqrt(5)]]).O.trace(ha).entropy() # doctest: +SKIP
     -1/5*log(1/5)/log2 - 4/5*log(4/5)/log2
-    >>> # The entropy from a symbolic expression is a big mess.  And in this
-    >>> # case it appears to not be correct since the resulting value is
-    >>> # a complex number.
-    >>> (ha*hb).array([[1,1],[1,exp(I*pi*x)]]).normalized().O.trace(ha).entropy(checks=False).simplify_full() # doctest: +SKIP
-    sqrt(e^(2*I*pi*x) + 3)*sqrt(3*e^(2*I*pi*x) + 1)*((-2*I*pi - 2*I*pi*x)*e^(I*pi*x) + 2*(e^(1/2*I*pi*x) - 2*e^(I*pi*x) + e^(3/2*I*pi*x))*log(e^(1/2*I*pi*x) - 1) - 2*(e^(1/2*I*pi*x) + 2*e^(I*pi*x) + e^(3/2*I*pi*x))*log(e^(1/2*I*pi*x) + 1) + I*pi*e^(1/2*I*pi*x) + I*pi*e^(3/2*I*pi*x) + 2*e^(I*pi*x)*log(e^(2*I*pi*x) + 3) + 2*e^(I*pi*x)*log(3*e^(2*I*pi*x) + 1))/(10*e^(2*I*pi*x)*log(2) + 3*e^(4*I*pi*x)*log(2) + 3*log(2))
-
+    >>> # The entropy from a symbolic expression is a big mess.  This expression
+    >>> # has been verified numerically, but simplify_full() gives something
+    >>> # which does not match numerically.
+    >>> (ha*hb).array([[1,1],[1,exp(I*pi*x)]]).normalized().O.trace(ha).entropy(checks=False) # doctest: +SKIP
+    1/4*((e^(I*pi*x) + 1)*sqrt(e^(I*pi*x)) - 2*e^(I*pi*x))*e^(-I*pi*x)*log(-1/4*((e^(I*pi*x) + 1)*sqrt(e^(I*pi*x)) - 2*e^(I*pi*x))*e^(-I*pi*x))/log2 - 1/4*((e^(I*pi*x) + 1)*sqrt(e^(I*pi*x)) + 2*e^(I*pi*x))*e^(-I*pi*x)*log(1/4*((e^(I*pi*x) + 1)*sqrt(e^(I*pi*x)) + 2*e^(I*pi*x))*e^(-I*pi*x))/log2
 
     >>> U = (ha * hb).eye() # doctest: +SKIP
     >>> # arrays can be indexed using dictionaries
